--- a/var/www/html/style.css
+++ b/var/www/html/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: 'Comic Neue', cursive, sans-serif;
   margin: 0;
   padding: 0;
   line-height: 1.6;
